force-app/main/default/objects/IbdACP__e.object
<CustomObject>
    <description>Inbound Applications and ACP Object</description>
    <fields>
        <fullName>Academic_CI_Sequence_Number__c</fullName>
        <label>Academic CI Sequence Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Calendar_Type__c</fullName>
        <label>Academic Calendar Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accepted_Date__c</fullName>
        <label>Accepted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Academic_Alternate_Code__c</fullName>
        <label>Actual Academic Alternate Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Admission_Calendar_Type__c</fullName>
        <label>Actual Admission Calendar Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Offer_Response_Date__c</fullName>
        <label>Actual Offer Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Admission_Application_Number__c</fullName>
        <label>Admission Application Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_CI_Sequence_Number__c</fullName>
        <label>Admission CI Sequence Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Calendar_Type__c</fullName>
        <label>Admission Calendar Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Category__c</fullName>
        <label>Admission Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Code__c</fullName>
        <label>Admission Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admissions_Process_Type__c</fullName>
        <label>Admissions Process Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Comments__c</fullName>
        <description>To interchange data related to Agent details</description>
        <label>Agent Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agent_Org_Unit_Code__c</fullName>
        <description>Agent detail integration</description>
        <label>Agent Org Unit Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Sequence_Number__c</fullName>
        <label>Application Sequence Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Att_Mode__c</fullName>
        <label>Att Mode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Att_Type__c</fullName>
        <label>Att Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attendance Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attendance_Mode_Description__c</fullName>
        <label>Attendance Mode Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Type_Description__c</fullName>
        <label>Attendance Type Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Basis_For_Admission_Type__c</fullName>
        <label>Basis For Admission Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Applicant_Id__c</fullName>
        <label>Callista Applicant Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Application_Id__c</fullName>
        <label>Callista Application Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Last_Modified_Date__c</fullName>
        <label>Callista Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Callista_Student_ID_MIX__c</fullName>
        <description>Person ID</description>
        <label>Student ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancelled?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certificate_to_be_printed__c</fullName>
        <label>Certificate to be printed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certification_Completed_Without_Points__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certification Completed Without Points ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certification_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certification Completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Citizenship_Country__c</fullName>
        <label>Citizenship Country</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commencement_Period__c</fullName>
        <label>Commencement Period</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completion_Certificate_Mailed_Date__c</fullName>
        <label>Completion Certificate Mailed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conditional_Offer_Satisfied_Date__c</fullName>
        <label>Conditional Offer Satisfied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Conditional_Offer_Status__c</fullName>
        <label>Conditional Offer Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conditions_Must_Be_Satisfied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditions Must Be Satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Correspondence_Category__c</fullName>
        <label>Correspondence Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <label>Course Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Offering_External_Unique_Id__c</fullName>
        <label>Course Offering External Unique Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Result__c</fullName>
        <label>Course Result</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <label>Course Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Version_Number__c</fullName>
        <label>Course Version Number</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Version__c</fullName>
        <label>Course Version</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Attended__c</fullName>
        <label>Days Attended</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferment_Status__c</fullName>
        <label>Deferment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred_Academic_Alternate_Code__c</fullName>
        <label>Deferred Academic Alternate Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred_Academic_CI_Sequence__c</fullName>
        <label>Deferred Academic CI Sequence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred_Admission_CI_Sequence__c</fullName>
        <label>Deferred Admission CI Sequence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred_Admission_Calendar_Type__c</fullName>
        <label>Deferred Admission Calendar Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deferred_Commencement_Period__c</fullName>
        <label>Deferred Commencement Period</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Documentation_Status__c</fullName>
        <label>Documentation Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enrolment_Category__c</fullName>
        <label>Enrolment Category</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entry_Qualification_Status__c</fullName>
        <label>Entry Qualification Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Category__c</fullName>
        <label>Fee Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Payment_Option__c</fullName>
        <label>Fee Payment Option</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intake_Period__c</fullName>
        <label>Intake Period</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedBy_API__c</fullName>
        <label>LastModifiedBy API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate_API__c</fullName>
        <label>LastModifiedDate API</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Application_ID__c</fullName>
        <label>Legacy Application ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Payment_Type_ID__c</fullName>
        <label>Legacy Payment Type ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Description__c</fullName>
        <label>Location Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marks__c</fullName>
        <label>Marks</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offer_Condition__c</fullName>
        <label>Offer Condition</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Offer_Date__c</fullName>
        <label>Offer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Response_Date_Lapse_Date__c</fullName>
        <label>Offer Response Date (Lapse Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Response_Status__c</fullName>
        <label>Offer Response Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offer_Round__c</fullName>
        <description>The VTAC round this acai/acp was added for.</description>
        <label>Offer Round</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Unit_Code__c</fullName>
        <label>Org Unit Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Unit_Description__c</fullName>
        <label>Org Unit Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outcome_Status__c</fullName>
        <label>Outcome Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Academic_CI_Sequence__c</fullName>
        <label>Override Academic CI Sequence</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Admission_CI_Sequence__c</fullName>
        <label>Override Admission CI Sequence</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Admission_Calendar_Type__c</fullName>
        <label>Override Admission Calendar Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <label>Person ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Sequence_Number__c</fullName>
        <label>Portal Sequence Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Precedent_ID__c</fullName>
        <label>Precedent ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pref__c</fullName>
        <label>Pref#</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receipt_Number__c</fullName>
        <label>Receipt Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment_Reference_Code__c</fullName>
        <description>Recruitment reference code on the ACP integrated from Callista. It serves as a reference code on the recruitment activity that relates to the ACP.  Code description reference is mastered in Callista.</description>
        <label>Recruitment Reference Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment_Reference_Description__c</fullName>
        <description>Recruitment reference description on the ACP integrated from Callista. It serves as a descriptive reference on the recruitment activity that relates to the ACP. Code description reference is mastered in Callista.</description>
        <label>Recruitment Reference Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requirement_Satisfied_Code__c</fullName>
        <label>Requirement Satisfied Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Status__c</fullName>
        <label>Response Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Place_Code__c</fullName>
        <label>Type of Place Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Place_Description__c</fullName>
        <label>Type of Place Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_External_Id__c</fullName>
        <label>Unique External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Set_Code__c</fullName>
        <label>Unit Set Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Set_Description__c</fullName>
        <label>Unit Set Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Set_Version__c</fullName>
        <label>Unit Set Version</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Inbound ACP</label>
    <pluralLabel>Inbound ACPs</pluralLabel>
</CustomObject>